[package]
name = "coloursum"
description = "🎨 Colourise your checksum output"
version = "0.2.0"
authors = ["Jessica Stokes <hello@jessicastokes.net>"]
edition = "2021"
repository = "https://github.com/ticky/coloursum"
readme = "Readme.md"
license = "MIT"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.0", features = ["derive"] }
ecoji = "1.0.0"
itertools = "0.10.5"

[dev-dependencies]
indoc = "2.0.3"
