[package]
name = "coloursum"
description = "🎨 Colourise your checksum output"
version = "0.3.0"
authors = ["Jessica Stokes <hello@jessicastokes.net>"]
edition = "2021"
repository = "https://github.com/ticky/coloursum"
readme = "Readme.md"
license = "MIT"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.0", features = ["derive"] }
ecoji = "1.0.0"
itertools = "0.10.5"

[target.'cfg(unix)'.dependencies]
sysinfo = "0.29.10"
which = { version = "3.1.1", default-features = false }

[dev-dependencies]
indoc = "2.0.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
